--- a/subprojects/docs/src/docs/userguide/buildEnvironment.adoc
+++ b/subprojects/docs/src/docs/userguide/buildEnvironment.adoc
@@ -104,11 +104,11 @@ systemProp.org.gradle.cache.remote.password=mypassword
 
 The following system properties are available. Note that command-line options take precedence over system properties.
 
-`org.gradle.cache.remote.url=(https://cachehost.mycompany.com/cache/)`::
+`org.gradle.cache.remote.url=(remote build cache URL)`::
 Specify URL of remote Gradle build cache. Learn more in the section on <<sec:build_cache_configure_remote, configuring a remote HTTP build cache>>.
 `org.gradle.cache.remote.username=(myuser)`::
 Specify username for authenticating to a remote Gradle build cache.
-`org.gradle.cache.remote.password=(something complex)`::
+`org.gradle.cache.remote.password=(mypassword)`::
 Specify password for authenticating to a remote Gradle build cache.
 `gradle.wrapperUser=(myuser)`::
 Specify user name to download Gradle distributions from servers using HTTP Basic Authentication. Learn more in <<sec:authenticated_download>>.
@@ -140,24 +140,18 @@ Gradle can also set project properties when it sees specially-named system prope
 
 .Setting a project property via gradle.properties
 ====
-
-`gradle.properties`
-
 [source,properties]
 ----
 org.gradle.project.foo=bar
 ----
-
 ====
 
 .Setting a project property via environment variable
 ====
-
 [source,properties]
 ----
 ORG_GRADLE_PROJECT_foo=bar
 ----
-
 ====
 
 [NOTE]
@@ -179,7 +173,7 @@ You should check for existence of optional project properties before you access 
 [[sec:accessing_the_web_via_a_proxy]]
 === Accessing the web through a HTTP proxy
 
-Configuring an HTTP or HTTPS proxy (for downloading dependencies, for example) is done via standard JVM system properties. These properties can be set directly in the build script; for example, setting the HTTP proxy host would be done with `System.setProperty('http.proxyHost', 'www.somehost.org')`. Alternatively, the properties can be <<gradle_configuration_properties,specified in gradle.properties>>.
+Configuring an HTTP or HTTPS proxy (for downloading dependencies, for example) is done via standard JVM system properties. These properties can be set directly in the build script; for example, setting the HTTP proxy host would be done with `System.setProperty('http.proxyHost', 'www.somehost.org')`. Alternatively, the properties can be <<sec:gradle_configuration_properties,specified in gradle.properties>>.
 
 .Configuring an HTTP proxy using `gradle.properties`
 ====
@@ -209,7 +203,7 @@ systemProp.https.nonProxyHosts=*.nonproxyrepos.com|localhost
 
 You may need to set other properties to access other networks. Here are 2 references that may be helpful:
 
-* link:https://git-wip-us.apache.org/repos/asf?p=ant.git;a=blob;f=src/main/org/apache/tools/ant/util/ProxySetup.java;hb=HEAD[ProxySetup.java in the Ant codebase].
+* link:https://git-wip-us.apache.org/repos/asf?p=ant.git;a=blob;f=src/main/org/apache/tools/ant/util/ProxySetup.java;hb=HEAD[ProxySetup.java in the Ant codebase]
 * link:http://download.oracle.com/javase/7/docs/technotes/guides/net/properties.html[JDK 7 Networking Properties]
 
 ==== NTLM Authentication
@@ -229,6 +223,6 @@ Suppose you'd like to ensure release builds are only triggered by CI. A simple w
 ++++
 <sample id="configureTaskUsingProjectProperty" dir="userguide/tutorial/configureTaskUsingProjectProperty" title="Prevent releasing outside of CI">
     <sourcefile file="build.gradle"/>
-    <output args="performRelease -PisCI=true"/>
+    <output args="performRelease -PisCI=true --quiet"/>
 </sample>
 ++++
