Allow rich Java compiler arguments (#3858)
This allows adding richer compiler arguments to JavaCompile.

--- a/subprojects/docs/src/docs/userguide/moreAboutTasks.adoc
+++ b/subprojects/docs/src/docs/userguide/moreAboutTasks.adoc
@@ -580,6 +580,49 @@ Input properties annotated with `@api:org.gradle.api.tasks.CompileClasspath[]` a
 Additionally to the aforementioned general classpath rules, compile classpaths ignore changes to everything but class files. Gradle uses the same class analysis described in <<sec:java_compile_avoidance>> to further filter changes that don't affect the class' ABIs.
 This means that changes which only touch the implementation of classes do not make the task out of date.
 
+[[sec:task_input_nested_inputs]]
+====== Nested inputs
+
+When analyzing `@api:org.gradle.api.tasks.Nested[]` task properties for declared input and output sub-properties Gradle uses the type of the actual value.
+Hence it can discover all sub-properties declared by a runtime sub-type.
+
+When adding `@api:org.gradle.api.tasks.Nested[]` to an iterable, each element is treated as a separate nested input.
+
+This allows richer modeling and extensibility for tasks, as e.g. shown by `api:org.gradle.api.tasks.compile.CompileOptions#getCompilerArgumentProviders[]`.
+
+For example, to declare annotation processor arguments, it is possible to do the following:
+
+[source,groovy]
+----
+class MyAnnotationProcessor implements CompilerArgumentProvider {
+    @InputFile
+    @PathSensitivite(NONE)
+    File inputFile
+
+    @OutputFile
+    File outputFile
+
+    MyAnnotationProcessor(File inputFile, File outputFile) {
+        this.inputFile = inputFile
+        this.outputFile = outputFile
+    }
+
+    @Override
+    List<String> asArguments() {
+        [
+            "-AinputFile=${inputFile.absolutePath}",
+            "-AoutputFile=${outputFile.absolutePath}"
+        ]
+    }
+}
+
+compileJava.options.compilerArgumentProviders << new MyAnnotationProcessor(inputFile, outputFile)
+----
+
+This models an annotation processor which requires an input file and generates an output file.
+
+The approach works for Java compiler arguments, since `api:org.gradle.api.tasks.compile.CompileOptions#getCompilerArgumentProviders[]` is an `Iterable` annotated with `@api:org.gradle.api.tasks.Nested[]`. In the same way, this kind of modelling is available to custom tasks.
+
 [[sec:task_input_output_runtime_api]]
 ===== Runtime API
 
