--- a/subprojects/docs/src/docs/userguide/dependencyManagement.adoc
+++ b/subprojects/docs/src/docs/userguide/dependencyManagement.adoc
@@ -466,7 +466,7 @@ Under the covers Gradle resolves dependencies from the respective URL of the pub
 [[sec:declaring_custom_repository]]
 ==== Declaring a custom repository by URL
 
-Most enterprise projects do not directly reference an open source repository to avoid potential breakage should it become unavailable. To ensure that needed dependencies are accessible at any time, organizations usually set up a binary repository available from within the intranet. Specifying a custom URL is also helpful if you want to declare a less popular, but publicly-available repository.
+Most enterprise projects set up a binary repository available only within an intranet. In-house repositories enable teams to publish internal binaries, setup user management and security measure and ensure uptime and availability. Specifying a custom URL is also helpful if you want to declare a less popular, but publicly-available repository.
 
 Add the following code to declare an in-house repository for your build reachable through a custom URL.
 
